--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
+    "postcss-pxtorem": "^6.0.0",
     "prettier": "^2.8.7"
   },
   "husky": {
