chore: lint-staged

--- a/package.json
+++ b/package.json
@@ -41,9 +41,8 @@
     }
   },
   "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
+    "{**/*,*}.{ts,tsx}": [
+      "eslint"
     ]
   }
 }
