--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "antd-mobile": "^5.29.1",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
+    "babel-plugin-import": "^1.13.6",
     "editorconfig": "^1.0.2",
     "eslint": "^8.38.0",
     "eslint-plugin-prettier": "^4.2.1",
