--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env MODE=local npx next dev",
+    "test": "cross-env MODE=test npx next dev",
+    "pre": "cross-env MODE=pre npx next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -30,6 +32,7 @@
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "babel-plugin-import": "^1.13.6",
+    "cross-env": "^7.0.3",
     "editorconfig": "^1.0.2",
     "eslint": "^8.38.0",
     "eslint-plugin-prettier": "^4.2.1",
